# beyondChats_backend

./: .env  .gitignore  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/core/: chroma_db.py  embeddings.py  llm.py  pdf_parser.py  supabase.py
app/routes/: chat.py  pdf.py  progress.py  quiz.py  upload.py  videos.py
app/services/: llm_service.py  pdf_service.py
